i think i might hate js

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"scripts": {
 		"postinstall": "yarn --cwd typ-server install",
 		"start": "cd typ-server && node run.js",
-		"heroku-postbuild": "yarn --cwd typ-server sequelize-cli db:migrate"
+		"heroku-postbuild": "yarn --cwd typ-server sequelize db:migrate"
 	},
 	"version": "1.0.0",
 	"main": "index.js",
