linkedom and permissive sequences

--- a/typ-server/package.json
+++ b/typ-server/package.json
@@ -19,8 +19,8 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
-    "jsdom": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
+    "linkedom": "^0.14.5",
     "lodash": "^4.17.15",
     "mime": "^2.4.4",
     "pg": "^8.7.1",
