--- a/typ-server/package.json
+++ b/typ-server/package.json
@@ -53,6 +53,7 @@
     "sass": "^1.35.1",
     "sass-loader": "^10",
     "style-loader": "^2",
+    "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-middleware": "^5.0.0",
