upgrade redis client

--- a/typ-server/config/config.json
+++ b/typ-server/config/config.json
@@ -4,7 +4,7 @@
     "dialect": "postgres"
   },
   "test": {
-    "use_env_variable": "DATABASE_URL",
+    "database": "typ_test",
     "dialect": "postgres"
   },
   "production": {
