--- a/typ-server/package.json
+++ b/typ-server/package.json
@@ -13,12 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "adm-zip": "^0.4.13",
-    "async-redis": "^2.0.0",
     "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.5",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
+    "ioredis": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "linkedom": "^0.14.5",
     "lodash": "^4.17.15",
@@ -28,7 +28,6 @@
     "random-seed": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "redis": "^3.1.2",
     "request": "^2.88.0",
     "sequelize": "^5.12.2",
     "sequelize-cli": "^5.5.0",
