--- a/typ-server/package.json
+++ b/typ-server/package.json
@@ -21,6 +21,7 @@
     "ioredis": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "linkedom": "^0.14.5",
+    "locators": "^2.0.2",
     "lodash": "^4.17.15",
     "mime": "^2.4.4",
     "pg": "^8.7.3",
@@ -33,7 +34,8 @@
     "sequelize-cli": "^5.5.0",
     "typ-client": "link:../typ-client",
     "vm2": "^3.8.3",
-    "ws": "^7.1.1"
+    "ws": "^7.1.1",
+    "zk-lock": "^2.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
