--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 node_modules
 yarn-error.log
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
