--- a/typ-server/package.json
+++ b/typ-server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "DATABASE_URL=postgres://typ:typ@127.0.0.1/typ_development nodemon run.js",
+    "start:dev": "node dev.js",
+    "start:prod": "NODE_ENV=production node run.js",
     "test": "DATABASE_URL=postgres://typ:typ@127.0.0.1/typ_test NODE_ENV=test ./node_modules/mocha/bin/mocha --exit",
-    "build": "webpack",
     "lint": "eslint ."
   },
   "author": "",
@@ -49,16 +49,15 @@
     "eslint": "^7.29.0",
     "eslint-plugin-react": "^7.24.0",
     "mocha": "^6.2.0",
+    "mock-aws-s3": "^4.0.2",
     "nodemon": "^2.0.9",
     "request-promise": "^4.2.4",
     "sass": "^1.35.1",
     "sass-loader": "^10",
     "style-loader": "^2",
     "url-loader": "^4.1.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-middleware": "^5.0.0",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2"
   },
   "engines": {
     "node": ">=16.4.0 <17.0.0"
