--- a/typ-server/.gitignore
+++ b/typ-server/.gitignore
@@ -4,3 +4,5 @@ dist
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+test/fixtures/numberGuesser/server/0/index.js
