--- a/isaac-four-souls/client/package.json
+++ b/isaac-four-souls/client/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "eslint": "^7.29.0",
-    "typ-client": "link:../../typ-client"
+    "game-core-client": "link:../../game-core-client"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
