--- a/isaac-four-souls/server/package.json
+++ b/isaac-four-souls/server/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "eslint": "^7.29.0",
-    "game-core": "link:../../game-core"
+    "game-core-server": "link:../../game-core-server"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
