--- a/game-core-server/package.json
+++ b/game-core-server/package.json
@@ -6,5 +6,13 @@
   "dependencies": {
     "linkedom": "^0.14.5",
     "random-seed": "^0.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
+    "mocha": "^6.2.0"
+  },
+  "scripts": {
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha"
   }
 }
