--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start:dev": "node dev.js",
     "start:prod": "NODE_ENV=production node run.js",
-    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --exit",
+    "test": "NODE_ENV=test npm run test:build:fixture && ./node_modules/mocha/bin/mocha --exit",
+    "test:build:fixture": "webpack -c test/fixtures/numberGuesser/webpack.config.js",
     "lint": "eslint ."
   },
   "author": "",
