--- a/isaac-four-souls/client/package.json
+++ b/isaac-four-souls/client/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "webpack",
-    "build:production": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
     "eslint": "^7.29.0",
