--- a/game-core/client/.eslintrc
+++ b/game-core/client/.eslintrc
@@ -21,5 +21,13 @@
   ],
   "rules": {
     "react/jsx-uses-vars": 2,
+    "no-unused-vars": [
+      "error",
+      {
+        argsIgnorePattern: "^_",
+        varsIgnorePattern: "^_",
+        caughtErrorsIgnorePattern: "^_"
+      }
+    ]
   }
 }
