--- a/isaac-four-souls/client/.eslintrc
+++ b/isaac-four-souls/client/.eslintrc
@@ -21,5 +21,13 @@
   ],
   "rules": {
     "react/jsx-uses-vars": 2,
+    "no-unused-vars": [
+      "error",
+      {
+        argsIgnorePattern: "^_",
+        varsIgnorePattern: "^_",
+        caughtErrorsIgnorePattern: "^_"
+      }
+    ]
   }
 }
