--- a/package.json
+++ b/package.json
@@ -11,6 +11,21 @@
     "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-stage-0": "^7.8.3",
+    "babel-loader": "^8.2.4",
+    "babel-preset-stage-0": "^6.24.1",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.7.1",
+    "preset-react": "^1.0.0",
+    "sass": "^1.49.11",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2",
     "@eslint/create-config": "^0.1.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
