--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,8 @@
 {
   "development": {
     "database": "boardzilla_development",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "test": {
     "database": "boardzilla_test",
@@ -15,6 +16,7 @@
         "require": true,
         "rejectUnauthorized": false
       }
-    }
+    },
+    "logging": false
   }
 }
