--- a/game-core/client/package.json
+++ b/game-core/client/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@sentry/browser": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
