--- a/game-core/client/package.json
+++ b/game-core/client/package.json
@@ -11,5 +11,8 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
     "reconnecting-websocket": "^4.4.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.29.4"
   }
 }
