--- a/server/package.json
+++ b/server/package.json
@@ -24,26 +24,23 @@
     "immutable": "^4.0.0-rc.12",
     "ioredis": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
-    "locators": "^2.0.2",
     "lodash": "^4.17.15",
     "mime": "^2.4.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "request": "^2.88.0",
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1",
     "vm2": "^3.8.3",
-    "ws": "^7.1.1",
-    "zk-lock": "^2.1.3"
+    "ws": "^7.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.2",
-    "chai": "^4.2.0",
+    "chai": "^4.3.6",
     "chai-spies": "^1.0.0",
     "class-names": "^1.0.0",
     "css-loader": "^5.2.6",
@@ -51,8 +48,8 @@
     "eslint-plugin-react": "^7.24.0",
     "mocha": "^6.2.0",
     "mock-aws-s3": "^4.0.2",
+    "needle": "^3.1.0",
     "nodemon": "^2.0.9",
-    "request-promise": "^4.2.4",
     "sass": "^1.35.1",
     "sass-loader": "^10",
     "style-loader": "^2",
