--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "immutable": "^4.0.0-rc.12",
     "ioredis": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
+    "locators": "^2.0.2",
     "lodash": "^4.17.15",
     "mime": "^2.4.4",
     "pg": "^8.7.3",
@@ -32,7 +33,8 @@
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1",
     "vm2": "^3.8.3",
-    "ws": "^7.1.1"
+    "ws": "^7.1.1",
+    "zk-lock": "^2.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
