--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "immutable": "^4.0.0-rc.12",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "loglevel": "^1.8.0",
     "mime": "^2.4.4",
+    "nanoid": "^3.3.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.3",
     "react": "^17.0.2",
