--- a/game-core/client/package.json
+++ b/game-core/client/package.json
@@ -15,6 +15,7 @@
     "xml-formatter": "^2.6.1"
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.29.4"
+    "eslint-plugin-react": "^7.29.4",
+    "react-resizable": "^3.0.4"
   }
 }
