--- a/game-core/server/package.json
+++ b/game-core/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "linkedom": "git+https://github.com/aghull/linkedom.git#uncache-attr-changes",
+    "linkedom": "^0.14.8",
     "nanoid": "^3.3.3",
     "random-seed": "^0.3.0"
   },
