Add release notes

--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.5",
+    "discord-markdown": "^2.5.1",
     "ejs": "^2.6.2",
     "express": "^4.18.1",
     "immutable": "^4.0.0-rc.12",
@@ -28,6 +29,7 @@
     "loglevel": "^1.8.0",
     "mime": "^2.4.4",
     "nanoid": "^3.3.3",
+    "needle": "^3.1.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.3",
     "react": "^17.0.2",
@@ -46,11 +48,11 @@
     "chai-spies": "^1.0.0",
     "class-names": "^1.0.0",
     "css-loader": "^5.2.6",
+    "errorhandler": "^1.5.1",
     "eslint": "^7.29.0",
     "eslint-plugin-react": "^7.24.0",
     "mocha": "^6.2.0",
     "mock-aws-s3": "^4.0.2",
-    "needle": "^3.1.0",
     "nodemon": "^2.0.9",
     "sass": "^1.35.1",
     "sass-loader": "^10",
