--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,8 +1,7 @@
 {
   "development": {
     "database": "boardzilla_development",
-    "dialect": "postgres",
-    "logging": false
+    "dialect": "postgres"
   },
   "test": {
     "database": "boardzilla_test",
