--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-react": "^7.29.4",
+    "nodemon": "^2.0.16",
     "preset-react": "^1.0.0",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
