--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.5",
+    "dayjs": "^1.11.2",
     "discord-markdown": "^2.5.1",
     "ejs": "^2.6.2",
     "express": "^4.18.1",
