--- a/game-core/server/package.json
+++ b/game-core/server/package.json
@@ -1,12 +1,12 @@
 {
   "name": "game-core-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "dependencies": {
     "linkedom": "^0.14.8",
-    "nanoid": "^3.3.3",
-    "random-seed": "^0.3.0"
+    "random-seed": "^0.3.0",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
