--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-stage-0": "^7.8.3",
     "@eslint/create-config": "^0.1.2",
+    "@types/jest": "^28.1.4",
+    "@types/random-seed": "^0.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "babel-loader": "^8.2.4",
     "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
-    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-react": "^7.29.4",
     "nodemon": "^2.0.16",
@@ -29,9 +32,15 @@
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
+    "source-map-loader": "^4.0.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "eslint-config-airbnb-typescript": "^17.0.0"
   }
 }
