--- a/powergrid/server/package.json
+++ b/powergrid/server/package.json
@@ -1,8 +1,8 @@
 {
   "name": "boardzilla-game-server",
-  "type": "commonjs",
+  "type": "module",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist",
