--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-stage-0": "^7.8.3",
     "@eslint/create-config": "^0.1.2",
+    "@types/chai": "^4.3.1",
+    "@types/chai-spies": "^1.0.3",
     "@types/jest": "^28.1.4",
     "@types/random-seed": "^0.3.3",
+    "@types/terser": "^3.12.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "babel-loader": "^8.2.4",
