--- a/isaac-four-souls/server/package.json
+++ b/isaac-four-souls/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "isaac-four-souls-server",
-  "type": "commonjs",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
