--- a/powergrid/server/package.json
+++ b/powergrid/server/package.json
@@ -2,7 +2,7 @@
   "name": "boardzilla-game-server",
   "type": "module",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist",
