--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
-    "outDir": "./built",
     "allowJs": true,
-    "target": "esnext",
+    "target": "ES2020",
     "types": ["node", "jest"],
     "module": "nodenext",
     "sourceMap": true,
